--- a/public/learn.html
+++ b/public/learn.html
@@ -133,79 +133,49 @@
     <script>
         // (All existing learn.html JavaScript code stays the same)
         // Just adding subscription checking at the beginning
-        // =========================
-// Enterprise Supabase boot (shared with login/dashboard)
-// =========================
-const STORAGE_KEY = 'logicpals.auth';
-const ENV_ENDPOINT = '/api/env';
-
-let sb = null;
-let SB_URL = null;
-let SB_KEY = null;
-
-async function fetchEnv() {
-  const res = await fetch(ENV_ENDPOINT, { cache: 'no-store' });
-  if (!res.ok) throw new Error('Env endpoint failed: ' + res.status);
-  const env = await res.json();
-  const url = env.SUPABASE_URL || env.NEXT_PUBLIC_SUPABASE_URL;
-  const key = env.SUPABASE_ANON_KEY || env.NEXT_PUBLIC_SUPABASE_ANON_KEY;
-  if (!url || !key) throw new Error('Missing Supabase config. Set SUPABASE_URL and SUPABASE_ANON_KEY in Vercel Environment Variables.');
-  SB_URL = url; SB_KEY = key;
-  return { url, key };
-}
-
-async function initSupabase() {
-  if (sb) return sb;
-  await fetchEnv();
-  sb = supabase.createClient(SB_URL, SB_KEY, {
-    auth: {
-      persistSession: true,
-      autoRefreshToken: true,
-      detectSessionInUrl: true,
-      storageKey: STORAGE_KEY,
-    },
-  });
-  return sb;
-}
-
-async function requireSessionOrRedirect() {
-  const client = await initSupabase();
-  const { data, error } = await client.auth.getSession();
-  if (error) throw error;
-  const session = data?.session || null;
-  if (!session) {
-    const next = encodeURIComponent(window.location.pathname + window.location.search);
-    window.location.href = `/login.html?next=${next}`;
-    return null;
-  }
-  return session;
-}
+        // Runtime config injected by Vercel (public values only)
+        const { SUPABASE_URL: SB_URL, SUPABASE_ANON_KEY: SB_KEY } = window.__LP_ENV || {};
+        if (!SB_URL || !SB_KEY) {
+            alert("Missing Supabase config. Set SUPABASE_URL and SUPABASE_ANON_KEY in Vercel Environment Variables.");
+        }
 
 
-// Best-effort subscription fetch (won't break page if RPC not present)
-async function safeGetSubscription(client) {
-  try {
-    // If you later add an RPC like get_my_subscription_status(), this will start working automatically
-    const { data, error } = await client.rpc('get_my_subscription_status');
-    if (!error && data) return data;
-  } catch (e) {}
-  return null;
-}
+        let sb, currentProblem, currentChildId;
+        let hintsUsed = 0, chatLog = [], startTime, timerInt;
+        let isProcessing = false;
+        let questionsAsked = 0;
+        let userSubscription = null;
 
-window.onload = async () => {
-  sb = await initSupabase();
-            // REQUIRE SESSION (no silent redirect loops)
-            const sessionObj = await requireSessionOrRedirect();
-            if (!sessionObj) return;
+        const learningInsights = {
+            'logic': 'LATERAL THINKING - looking at problems in creative ways!',
+            'arithmetic': 'NUMBER SENSE - understanding how numbers work together!',
+            'word-problem': 'COMPREHENSION - understanding what the question really asks!',
+            'pattern': 'PATTERN RECOGNITION - spotting what comes next!',
+            'algebra': 'ABSTRACT THINKING - working with unknown values!'
+        };
 
-            // OPTIONAL: subscription banner (best-effort; safe if RPC not present)
-            userSubscription = await safeGetSubscription(sb);
+        const localPuzzles = [
+            { id: "999", problem_text: "A farmer has 17 sheep and all but 9 die. How many are left?", solution_explanation: "9", category: "logic", difficulty: "medium", hints: ["Read carefully!", "It says 'all but 9'"] }
+        ];
+
+        window.onload = async () => {
+            sb = supabase.createClient(SB_URL, SB_KEY, { auth: { storageKey: 'lp_auth', persistSession: true, autoRefreshToken: true, detectSessionInUrl: true } });
+            
+            // CHECK SUBSCRIPTION FIRST
+            const loggedIn = await SubscriptionGuard.requireLogin();
+            if (!loggedIn) return;
+
+            userSubscription = await SubscriptionGuard.getUserSubscription();
+            
+            // Check if subscription is expired
             if (userSubscription && userSubscription.expired) {
                 showSubscriptionBanner('expired');
+                // Still allow them to see the page but with limited functionality
             } else if (userSubscription && userSubscription.tier === 'free_trial') {
-                const daysRemaining = Number(userSubscription.days_remaining || userSubscription.daysRemaining || 0);
-                if (daysRemaining > 0 && daysRemaining <= 3) {
-                    showSubscriptionBanner('trial_ending', daysRemaining);
+                // Show days remaining for free trial
+                const tierInfo = await SubscriptionGuard.getUserTierInfo();
+                if (tierInfo.daysRemaining <= 3) {
+                    showSubscriptionBanner('trial_ending', tierInfo.daysRemaining);
                 }
             }
 
@@ -293,7 +263,7 @@ window.onload = async () => {
         async function loadNextPuzzle(clearMemory) {
             // Check subscription before loading problems
             if (userSubscription && userSubscription.expired) {
-                (window.SubscriptionGuard && typeof SubscriptionGuard.showUpgradeModal==='function' ? SubscriptionGuard.showUpgradeModal : function(){alert('Upgrade required to continue.');})(
+                SubscriptionGuard.showUpgradeModal(
                     'Your free trial has ended! Upgrade to continue solving unlimited problems.',
                     'champion'
                 );
